# refrugee_management

./: .gitignore  Claude.md  db.sqlite3  manage.py  pyproject.toml
.claude/: settings.local.json
game/: admin.py  models.py  serializers.py  urls.py  views.py
game/migrations/: 0001_initial.py
items/: models.py  serializers.py  urls.py  views.py
items/migrations/: 0001_initial.py
refrugee_management/: asgi.py  settings.py  urls.py  wsgi.py
